# video_recorder-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  setup.py  tracks.yaml
action/: SaveImage.action
audio_recorder/: CHANGELOG.rst  audio_recorder_node.py  package.xml  setup.py
audio_recorder/launch/: audio_recorder_node.launch.py
audio_recorder_msgs/: CHANGELOG.rst  package.xml
audio_recorder_msgs/action/: StartRecording.action  StopRecording.action
debian/: changelog  control  copyright  gbp.conf  rules
src/audio_recorder/: audio_recorder_node.py
video_recorder/: CHANGELOG.rst  CMakeLists.txt  package.xml
video_recorder/include/video_recorder/: video_recorder_node.hpp
video_recorder/src/: video_recorder_node.cpp
video_recorder_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
video_recorder_msgs/action/: StartRecording.action  StopRecording.action
