<?xml version="1.0"?>
<package format="3">
  <name>audio_recorder</name>
  <version>2.0.2</version>
  <description>Utilities for recording audio data to a file on-disk</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <license>BSD</license>

  <depend>alsa-utils</depend>
  <depend>audio_recorder_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
