<?xml version="1.0"?>
<package format="2">
  <name>video_recorder</name>
  <version>2.0.1</version>
  <description>Utilities for recording image data to a video file on-disk</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>video_recorder_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
